--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ VUE_APP_BASEURL=/api
 
 
 # 代理转发
-CONFIG_proxyUrl=http://atciye.natappfree.cc/api-console
+CONFIG_proxyUrl= http://qe7z3w.natappfree.cc/api-console
 # 部署应用包URL
 CONFIG_publicpath=/
 # 静态资源目录
