--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=production
 
-VUE_APP_ROUTER_BASE_URL=/
+VUE_APP_ROUTER_BASE_URL=/admin/
 # 接口地址
 #VUE_APP_BASEURL=https://www.q23.xyz/api
 VUE_APP_BASEURL=/api-console
@@ -9,7 +9,7 @@ VUE_APP_BASEURL=/api-console
 # 代理转发
 CONFIG_proxyUrl=
 # 部署应用包URL
-CONFIG_publicpath=/
+CONFIG_publicpath=./
 # 静态资源目录
 CONFIG_assetsDir=
 # eslint
