--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ VUE_APP_BASEURL=/api
 
 
 # 代理转发
-CONFIG_proxyUrl= https://jcb.jichibang2019.com/api-console
+CONFIG_proxyUrl= http://192.168.0.160:9988/api-console
 # 部署应用包URL
 CONFIG_publicpath=/
 # 静态资源目录
