--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ VUE_APP_BASEURL=/api-console
 # 代理转发
 CONFIG_proxyUrl=
 # 部署应用包URL
-CONFIG_publicpath=./
+CONFIG_publicpath=/admin
 # 静态资源目录
 CONFIG_assetsDir=
 # eslint
