--- a/.env.development
+++ b/.env.development
@@ -6,8 +6,7 @@ VUE_APP_BASEURL=/api
 
 
 # 代理转发
-CONFIG_proxyUrl= http://192.168.0.160:9988/api-console
-# 部署应用包URL
+CONFIG_proxyUrl= http://yc2bva.natappfree.cc/api-console
 CONFIG_publicpath=/
 # 静态资源目录
 CONFIG_assetsDir=
